desktopfileparser: Fix non-compliant key/value parsing.

The Desktop Entry spec says we should ignore the spaces surrounding the
'=' delimiter in a Key=Value pair.  But we only do this sometimes (all
cases except the Type= entry which is handled specially).  This change
fixes Type entries to ignore whitespace as well.

BUG:310674
FIXED-IN:5.38.0

Differential Revision: https://phabricator.kde.org/D7170